# error-lens

./: .gitignore  README.md
error-kb-agent/: Dockerfile  README.md  pyproject.toml
error-kb-agent/a2a_client/: .env.template  agent.py
error-kb-agent/error_kb_agent/: .env.template  __init__.py  agent.py  prompts.py  tools.py
error-kb-agent/error_kb_agent/skills/log-error/: SKILL.md
error-kb-agent/error_kb_agent/skills/log-error/references/: field_guide.md
error-kb-agent/error_kb_agent/skills/open-cases/: SKILL.md
error-kb-agent/error_kb_agent/skills/open-cases/references/: output_style_guide.md
error-kb-agent/error_kb_agent/skills/resolve-case/: SKILL.md
error-kb-agent/error_kb_agent/skills/resolve-case/references/: workflow_guide.md
error-kb-agent/error_kb_agent/skills/search-errors/: SKILL.md
error-kb-agent/error_kb_agent/skills/search-errors/references/: output_style_guide.md  similarity_guide.md
error-kb-toolbox/: .env.template  README.md  pyproject.toml  tools.yaml
error-lens-mas/: README.md  pyproject.toml
error-lens-mas/error_lens_agent/: .env.template  __init__.py  agent.py  models.py  prompts.py  requirements.txt  token_tracker.py
error-lens-mas/error_lens_agent/config/: artifact_service.py  config.py
error-lens-mas/error_lens_agent/sub_agents/: __init__.py  community_search_agent.py  deep_search_agent.py  gcp_knowledge_agent.py  knowledge_bank_agent.py  research_aggregator_agent.py  signal_extractor_agent.py
error-lens-mas/error_lens_agent/tools/: __init__.py  mcp_config.py  report_pdf_tool.py
